Issue IMCMS-425: Design changes log in window - Added align element absolute left side;

--- a/src/main/webapp/css/imcms-login-page.css
+++ b/src/main/webapp/css/imcms-login-page.css
@@ -62,4 +62,5 @@
 
 .imcms-info-body__login-buttons {
     margin: 10px;
+    padding-left: 100%;
 }
